--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section
   id="home"
-  class="min-h-screen scroll-smooth scroll-mt-[60px] flex flex-col-reverse md:flex-row items-center justify-evenly gap-10 py-16 px-6 text-white text-center md:text-left"
+  class="min-h-[100dvh] border-2 border-red-500 scroll-smooth scroll-mt-[60px] flex flex-col-reverse items-center justify-center md:flex-row md:items-center md:justify-evenly gap-10 pt-24 pb-32 px-6 text-white text-center md:text-left"
 >
   <div class="max-w-xl">
     <h2 class="text-2xl font-medium mb-2">Hello, I'm</h2>
@@ -29,7 +29,7 @@
   <img
     src="/imgs/my.jpg"
     alt="my photo"
-    class="w-52 h-52 md:w-80 md:h-80 object-cover rounded-full shadow-lg"
+    class="w-52 max-w-full h-auto md:w-80 md:h-80 object-cover rounded-full shadow-lg"
   />
 </section>
 @if (showScrollTopBtn) {
@@ -42,7 +42,7 @@
 }
 <section
   id="about"
-  class="bg-white py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
+  class="bg-white py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
@@ -53,7 +53,9 @@
     <span class="relative z-10 border-b-4 border-red-500 pb-1"> ABOUT ME </span>
   </h2>
 
-  <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-10">
+  <div
+    class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-10 overflow-x-hidden"
+  >
     <div class="flex-shrink-0" data-aos="fade-right">
       <img
         src="/imgs/my.jpg"
@@ -123,7 +125,7 @@
 </section>
 <section
   id="skills"
-  class="bg-gradient-to-b from-gray-900 to-blue-900 py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
+  class="bg-gradient-to-b from-gray-900 to-blue-900 py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
@@ -265,7 +267,7 @@
 </section>
 <section
   id="projects"
-  class="py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
+  class="py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
 >
   <h2 class="text-3xl text-center font-bold mb-6 relative">
     <span
@@ -528,7 +530,7 @@
 </section>
 <section
   id="contact"
-  class="bg-white py-16 px-6 md:px-20 scroll-smooth scroll-mt-[60px]"
+  class="bg-white py-16 px-6 md:px-20 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
