--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section
   id="home"
-  class="min-h-[100dvh] border-2 border-red-500 scroll-smooth scroll-mt-[60px] flex flex-col-reverse items-center justify-center md:flex-row md:items-center md:justify-evenly gap-10 pt-24 pb-32 px-6 text-white text-center md:text-left"
+  class="min-h-[100dvh] scroll-smooth scroll-mt-[60px] flex flex-col-reverse items-center justify-center md:flex-row md:items-center md:justify-evenly gap-10 pt-24 pb-32 px-6 text-white text-center md:text-left"
 >
   <div class="max-w-xl">
     <h2 class="text-2xl font-medium mb-2">Hello, I'm</h2>
@@ -42,7 +42,7 @@
 }
 <section
   id="about"
-  class="bg-white py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
+  class="bg-white py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
@@ -125,7 +125,7 @@
 </section>
 <section
   id="skills"
-  class="bg-gradient-to-b from-gray-900 to-blue-900 py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
+  class="bg-gradient-to-b from-gray-900 to-blue-900 py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
@@ -267,7 +267,7 @@
 </section>
 <section
   id="projects"
-  class="py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
+  class="py-16 px-6 md:px-16 scroll-smooth scroll-mt-[60px]"
 >
   <h2 class="text-3xl text-center font-bold mb-6 relative">
     <span
@@ -530,7 +530,7 @@
 </section>
 <section
   id="contact"
-  class="bg-white py-16 px-6 md:px-20 scroll-smooth scroll-mt-[60px] border-2 border-red-500"
+  class="bg-white py-16 px-6 md:px-20 scroll-smooth scroll-mt-[60px]"
 >
   <h2 class="text-4xl text-center font-bold mb-6 relative">
     <span
