--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -648,6 +648,12 @@
           class="hover:text-blue-800 text-2xl"
           ><i class="fab fa-whatsapp"></i
         ></a>
+        <a
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=abdelazizkishk19@gmail.com"
+          target="_blank"
+          class="hover:text-blue-800 text-2xl"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
       </div>
     </div>
   </div>
