--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #b91c1c;
+    border-radius: 3px;
+  }
+}
+
 body {
   font-family: "Inter", sans-serif;
 }
