--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <section
   id="home"
-  class="min-h-[100dvh] scroll-smooth scroll-mt-[60px] flex flex-col-reverse items-center justify-center md:flex-row md:items-center md:justify-evenly gap-10 pt-24 pb-32 px-6 text-white text-center md:text-left"
+  class="min-h-[100dvh] scroll-smooth scroll-mt-[60px] flex flex-col-reverse items-center justify-center md:flex-row md:items-center md:justify-evenly gap-10 pt-24 pb-32 px-6 text-center md:text-left"
 >
   <div class="max-w-xl">
-    <h2 class="text-2xl font-medium mb-2">Hello, I'm</h2>
+    <h2 class="text-2xl font-medium mb-2 text-white">Hello, I'm</h2>
     <h1 class="text-2xl md:text-5xl font-bold uppercase mb-3 text-red-700">
       Abdelaziz Mohamed
     </h1>
@@ -11,16 +11,17 @@
       Front End Developer | Angular
     </h5>
 
-    <p class="block md:hidden mb-6 text-gray-200">
-      Junior Frontend Developer passionate about web and technology.
+    <p class="block md:hidden mb-6 text-gray-300">
+      I'm a passionate Frontend Developer with a strong background in Angular
+      and modern web technologies
     </p>
 
-    <p class="hidden md:block mb-6 text-gray-200">
-      A passionate Junior Frontend Developer. After discovering a deep interest
-      in software development and technology, I constantly improved my technical
-      skills, aiming to contribute to innovative web solutions. I am eager to
-      contribute my frontend development skills and engineering background to
-      create impactful, user-centered web solutions.
+    <p class="hidden md:block mb-6 text-gray-300">
+      I'm a passionate Frontend Developer with a strong background in Angular
+      and modern web technologies like Tailwind CSS and TypeScript. I enjoy
+      building clean, responsive, and user-friendly interfaces that bring ideas
+      to life. With a continuous drive to improve and learn, I aim to contribute
+      to innovative web projects that make a real impact
     </p>
 
     <a
@@ -93,35 +94,35 @@
         <h3 class="font-semibold mb-1 text-2xl">Education & Courses</h3>
         <div class="flex flex-wrap gap-2">
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Alexandria University</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Bachelor of Engineering</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Graduated 2023</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >GPA B (84.5%)</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Route Academy</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Front End Developer</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Diploma Degree</span
           >
           <span
-            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700"
+            class="bg-gray-100 text-sm px-3 py-1 rounded-md shadow border-2 border-red-700 hover:bg-red-700 hover:text-white transition"
             >Graduated 2025</span
           >
         </div>
