--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -301,19 +301,19 @@
       <div class="p-4">
         <h5 class="text-xl text-red-600 font-bold mb-2">E-commerce App</h5>
         <p class="text-gray-600 mb-4 text-sm">
-          SwiftCart is a user-friendly shopping platform designed to provide a
+          Shop.co is a user-friendly shopping platform designed to provide a
           seamless and efficient online shopping experience.
         </p>
         <div class="flex flex-wrap gap-3">
           <a
-            href="https://e-commerce-swift-cart.vercel.app/"
+            href="https://shop-co-sable.vercel.app/"
             target="_blank"
             class="px-4 py-2 text-sm font-medium border border-red-500 text-red-600 rounded hover:bg-red-500 hover:text-white transition"
           >
             View Demo
           </a>
           <a
-            href="https://github.com/AbdelazizKishk/E-commerce"
+            href="https://github.com/AbdelazizKishk/Shop.co"
             target="_blank"
             class="px-4 py-2 text-sm font-medium border border-gray-400 text-gray-700 rounded hover:bg-gray-700 hover:text-white transition"
           >
