--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,8 +25,8 @@
     </p>
 
     <a
-      href="/Cv/Abdelaziz%20mohamed%20CV.pdf"
-      download="Abdelaziz Mohamed CV.pdf"
+      href="/Cv/Abdelaziz%20mohamed-Frontend%20Angular%20CV.pdf"
+      download="Abdelaziz Mohamed-Frontend Angular CV.pdf"
       class="bg-white text-gray-900 px-6 py-2 rounded-md font-semibold hover:bg-red-700 hover:text-white transition"
     >
       Download CV
